# hasql-pool

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  build.bash  cabal.project  hasql-pool.cabal  hie.yaml  shell.nix  stack.yaml
.github/workflows/: check.yaml  ci.yaml  deploy-docs-to-pages.yaml  haskell.yml  on-push-to-master-or-pr.yaml  on-push-to-release.yaml
bounded-counter/: BoundedCounter.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: hasql-pool-1.3.0.3-inplace.conf  package.cache
generic-pool/: GenericPool.hs
power-prelude/: PowerPrelude.hs
src/integration-tests/Helpers/: Hooks.hs  Scripts.hs  Sessions.hs
src/integration-tests/Specs/: SessionErrorDestructorsSpec.hs
src/integration-tests/Specs/BySubject/: ReleaseSpec.hs  SpecHook.hs  UseSpec.hs
src/integration-tests/Specs/BySubject/Config/: AgingTimeoutSpec.hs  IdlenessTimeoutSpec.hs  InitSessionSpec.hs
src/integration-tests/Specs/BySubject/Helpers/Sessions/: CountConnectionsSpec.hs  GetSettingSpec.hs
src/integration-tests/Specs/BySubject/UsageError/: AcquisitionTimeoutSpec.hs  SessionSpec.hs
src/test/: Hooks.hs  Main.hs  Main.hs.bak  Scripts.hs
src/test/Helpers/: Scripts.hs  Sessions.hs  Testcontainers.hs
src/test/Specs/BySubject/: ReleaseSpec.hs  SpecHook.hs  UseSpec.hs
src/test/Specs/BySubject/Config/: AgingTimeoutSpec.hs  IdlenessTimeoutSpec.hs
src/test/Specs/BySubject/Helpers/Sessions/: CountConnectionsSpec.hs  GetSettingSpec.hs
src/test/Specs/BySubject/UsageError/: AcquisitionTimeoutSpec.hs  SessionSpec.hs
src/test/TestingKit/: Testcontainers.hs
test/: Main.hs
test/Hasql/: PoolSpec.hs  Prelude.hs
time-extras/TimeExtras/: Conversions.hs  IO.hs
workflows/: haskell.yml
