name:
  hasql-pool
version:
  0.5
category:
  Hasql, Database, PostgreSQL
synopsis:
  A pool of connections for Hasql
homepage:
  https://github.com/nikita-volkov/hasql-pool 
bug-reports:
  https://github.com/nikita-volkov/hasql-pool/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/hasql-pool.git


library
  hs-source-dirs:
    library
  ghc-options:
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Hasql.Pool.Prelude
  exposed-modules:
    Hasql.Pool
  build-depends:
    -- resources:
    resource-pool >= 0.2 && < 0.3,
    -- database:
    hasql >= 1.3 && < 1.4,
    -- data:
    time >= 1.5 && < 2,
    -- general:
    base-prelude >= 1 && < 2


test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
    Hasql.PoolSpec
    Hasql.Prelude
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    hasql-pool,
    -- hasql-pool internals:
    resource-pool >= 0.2 && < 0.3,
    -- database:
    hasql >= 1.3 && < 1.4,
    -- data:
    -- text >= 1.2 && < 1.3,
    -- testing:
    hspec >= 2.6 && < 2.7,
    tasty-hspec >= 1.1 && < 1.2,
    tasty >= 1.2 && < 1.3,
    -- general:
    base-prelude >= 1 && < 2