cabal-version: 3.0

name: hasql-pool
version: 0.6.0.1

category: Hasql, Database, PostgreSQL
synopsis: A pool of connections for Hasql
homepage: https://github.com/nikita-volkov/hasql-pool
bug-reports: https://github.com/nikita-volkov/hasql-pool/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2015, Nikita Volkov
license: MIT
license-file: LICENSE
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/nikita-volkov/hasql-pool.git

common base-settings
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DerivingVia, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLists, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010

library
  import: base-settings
  hs-source-dirs: library
  exposed-modules:
    Hasql.Pool
  build-depends:
    generic-pool,
    hasql >=1.6.0.1 && <1.7,
    power-prelude,

library power-prelude
  import: base-settings
  hs-source-dirs: power-prelude
  exposed-modules:
    PowerPrelude
  build-depends:
    base >=4.11 && <5,
    stm >=2.5 && <3,
    time >=1.5 && <2,
    transformers >=0.5 && <0.7,

library time-extras
  import: base-settings
  hs-source-dirs: time-extras
  exposed-modules:
    TimeExtras.IO
    TimeExtras.Conversions
  build-depends:
    power-prelude,

library bounded-counter
  import: base-settings
  hs-source-dirs: bounded-counter
  exposed-modules:
    BoundedCounter
  build-depends:
    power-prelude,

library generic-pool
  import: base-settings
  hs-source-dirs: generic-pool
  exposed-modules:
    GenericPool
  build-depends:
    bounded-counter,
    power-prelude,
    time-extras,

test-suite test
  import: base-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    hasql,
    hasql-pool,
    hspec >=2.6 && <3,
    rerebase >=1.15 && <2,
    stm >=2.5 && <3,
