cabal-version: 3.0
name: hasql-pool
version: 1.4
category: Hasql, Database, PostgreSQL
synopsis: Pool of connections for Hasql
homepage: https://github.com/nikita-volkov/hasql-pool
bug-reports: https://github.com/nikita-volkov/hasql-pool/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2015, Nikita Volkov
license: MIT
license-file: LICENSE
extra-source-files:
  CHANGELOG.md
  diagrams-output/*.png

extra-doc-files:
  diagrams-output/*.png

source-repository head
  type: git
  location: https://github.com/nikita-volkov/hasql-pool

common base-settings
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import: base-settings
  hs-source-dirs:
    src/library/exposed
    src/library/other

  -- cabal-gild: discover src/library/exposed
  exposed-modules:
    Hasql.Pool
    Hasql.Pool.Config
    Hasql.Pool.Config.Defaults
    Hasql.Pool.Observation

  -- cabal-gild: discover src/library/other
  other-modules:
    Hasql.Pool.Config.Config
    Hasql.Pool.Config.Setting
    Hasql.Pool.Prelude
    Hasql.Pool.SessionErrorDestructors

  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10 && <0.14,
    hasql >=1.10 && <1.11,
    stm >=2.5 && <3,
    text >=1.2 && <3,
    time >=1.9 && <2,
    uuid >=1.3 && <2,

test-suite test
  import: base-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: src/integration-tests
  main-is: Main.hs
  other-modules:
    Helpers.Hooks
    Helpers.Scripts
    Helpers.Sessions
    Specs.BySubject.Config.AgingTimeoutSpec
    Specs.BySubject.Config.IdlenessTimeoutSpec
    Specs.BySubject.Config.InitSessionSpec
    Specs.BySubject.Helpers.Sessions.CountConnectionsSpec
    Specs.BySubject.Helpers.Sessions.GetSettingSpec
    Specs.BySubject.ReleaseSpec
    Specs.BySubject.SpecHook
    Specs.BySubject.UsageError.AcquisitionTimeoutSpec
    Specs.BySubject.UsageError.SessionSpec
    Specs.BySubject.UseSpec

  ghc-options: -threaded
  build-tool-depends:
    hspec-discover:hspec-discover ^>=2.11.12

  build-depends:
    async >=2.2 && <3,
    hasql,
    hasql-pool,
    hspec >=2.6 && <3,
    postgresql-libpq >=0.10 && <0.12,
    random >=1.2 && <2,
    rerebase >=1.15 && <2,
    testcontainers-postgresql >=0.2 && <0.3,
    text-builder >=1 && <1.1,
    tuple ^>=0.3.0.2,
